<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wind Mobile</string>
    <string name="app_url">la-haut.info/windmobile-android</string>

    <string name="tab_station_list">Stations</string>
    <string name="tab_station_map">Map</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_settings">Settings</string>

    <string name="menu_refresh_title">Refresh</string>
    <string name="menu_landscape_title">Wind chart</string>
    <string name="menu_portrait_title">Station data</string>
    <string name="menu_about_title">About</string>

    <string name="menu_favorite_add_title">Add to favorites</string>
    <string name="menu_favorite_remove_title">Remove from favorites</string>
    <string name="menu_map_title">Show on map</string>

    <string name="menu_chart_duration_title">Chart duration</string>
    <string name="menu_chart_duration_6_hours">6 hours</string>
    <string name="menu_chart_duration_12_hours">12 hours</string>
    <string name="menu_chart_duration_1_day">1 day</string>
    <string name="menu_chart_duration_2_days">2 days</string>

    <string name="loading_text">Loading...</string>

    <string name="altitude_label">Altitude:</string>
    <string name="meters_text">meters</string>
    <string name="meters_short_text">m</string>

    <string name="wind_last_title">Wind</string>
    <string name="wind_history_title">Wind - last hour</string>
    <string name="air_title">Air</string>

    <string name="wind_max_label">Gust</string>
    <string name="wind_trend_label">Trend</string>
    <string name="wind_history_min_label">Minimum</string>
    <string name="wind_history_average_label">Average</string>
    <string name="wind_history_max_label">Maximum</string>
    <string name="air_temperature_label">Temperature</string>
    <string name="air_humidity_label">Humidity</string>

    <string name="kmh_unit">km/h</string>
    <string name="temperature_unit">°C</string>
    <string name="humidity_unit">% rel</string>

    <string name="server_unauthorized_error">Unauthorized</string>
    <string name="server_connection_error">Network error</string>
    <string name="server_invalid_data">Data error</string>
    <string name="server_database_error">Database error</string>
    <string name="server_unknown_error">Server error</string>

    <string name="data_error">Data error</string>
    <string name="network_error">Network error</string>
    <string name="unknown_error">Error</string>

    <string name="button_ok">Ok</string>
    <string name="button_quit">Quit</string>

    <string name="chart_yaxis_title">Wind (average/gust)</string>

    <string name="pref_map_type_title">Map type</string>
    <string name="pref_network_timeout_title">Network timeout</string>
    <string name="pref_cat_stations">Weather stations</string>
    <string name="pref_operational_station_only_title">Operational only</string>
    <string name="pref_operational_station_only_summary">Display operational weather stations only</string>
    <string name="pref_cat_user">User account</string>
    <string name="pref_username_title">Email</string>
    <string name="pref_username_summary">Your email used for the registration</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_summary">Your password</string>

    <string name="widget_configuration_activity_name">Select your widget station</string>
    <string name="widget_error">Unknown widget</string>
</resources>
